@@ -3478,6 +3478,25 @@ if ("package:bit" %in% search()) {
     test(1153, data.table:::setattr(x, FALSE, FALSE), error="Attribute name must be")
 }
 
+# Fixed binary search capabilities for NA (for int and double) and NaN (for double):
+set.seed(1)
+DT <- data.table(x=sample(c(NA, NaN, Inf, 1:10), 100, TRUE), y=sample(c(NA, 1:10), 100, TRUE), z=sample(c(NA_character_, letters[1:10]), 100, TRUE))
+setkey(DT, x)
+test(1154.1, DT[J(NaN)], DT[is.nan(x)])
+test(1154.2, DT[J(NA_real_)], DT[is.na(x) & !is.nan(x)])
+setkey(DT, y)
+test(1154.3, setcolorder(DT[J(NA_integer_)], c("x", "y", "z")), DT[is.na(y)])
+setkey(DT, z)
+test(1154.3, setcolorder(DT[J(NA_character_)], c("x", "y", "z")), DT[is.na(z)])
+
+# Fixing the binary search above for NA/NaN also fixes BUG #4918
+dt1 <- data.table(x = c('red','orange','green'), y=c(1,2,NA), key='y')
+dt2 <- data.table(y = c(1,2,3,NA), z = c('a','b','c','missing data'), key='y')
+test(1155.1, merge(dt1, dt2, by=c('y')), data.table(y=dt1$y, x=dt1$x, z=dt2$z[1:3], key="y"))
+test(1155.2, dt2[dt1], data.table(y=dt1$y, z=dt2$z[1:3], x=dt1$x, key="y"))
+test(1155.3, dt1[dt2, nomatch=0L], data.table(y=dt1$y, x=dt1$x, z=dt2$z[1:3], key="y"))
+
+
 # tests of freading classes like Date and the verbose messages there.
 # Test mid read bump of logical T/F to character, collapse back to T and F.
 
